--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,14 +1,7 @@
 // imports
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import "./_vars.scss";
 
-// colors
-$primary: #30A0EE;
-$error: #ef5777;
-$success: #1abc9c;
-$light: #F5F8FA;
-$medium: #657786;
-$dark: #5d7079;
-$white: #fff;
 // resets
 body {
   margin: 0;
